--- a/track-show/css/main.css
+++ b/track-show/css/main.css
@@ -465,3 +465,17 @@ div.links_category_add span {
     min-width: 120px; 
     margin-bottom: 5px;
 }
+
+
+#per_day_range {
+        background: #ffffff;
+        -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.25), inset 0 -1px 0 rgba(0,0,0,.1);
+        -moz-box-shadow: 0 1px 3px rgba(0,0,0,.25), inset 0 -1px 0 rgba(0,0,0,.1);
+        box-shadow: 0 1px 3px rgba(0,0,0,.25), inset 0 -1px 0 rgba(0,0,0,.1);
+        color: #333333;
+        padding: 8px;
+        line-height: 18px;
+        cursor: pointer;
+        margin-top: 12px;
+        margin-right: 20px;
+    }
